created footers for dada mail & mailchimp

--- a/plug-n-play-template/footer.html
+++ b/plug-n-play-template/footer.html
@@ -9,7 +9,7 @@
             </td>
           </tr>
           <tr>
-            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 20px 20px 20px;">
+            <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; text-decoration: none;line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:0px 20px 20px 20px;">
               <p style="margin:0;">&copy; 2017. Header provider strategic consulting support conversation advertisements policy promotional request. Option purpose programming intentional logo color account correct user rates.</p>
             </td>
           </tr>
