--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -120,7 +120,7 @@ footer color: #333333
 <!-- PREVIEW -->
 <div style="display:none !important; visibility:hidden; mso-hide:all; font-size:1px; font-weight:normal; color:orange; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden;">Insert preview text here. text color is orange!!! make color the same as background color!!! (EmailOnAcid CSS code) 
   </div>
-  <!-- END PREVIEW --> 
+<!-- END PREVIEW --> 
     <table bgcolor="purple" style="background-color:purple;"  role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
       <tr>
         <td align="center" valign="top">
@@ -759,5 +759,7 @@ footer color: #333333
       </td>
     </tr>
   </table>
+<!-- ADD EOA HERE --> 
+<!-- END ADD EOA HERE -->
 </body>
 </html>
