--- a/plug-n-play-template/footer-dadamail-address.html
+++ b/plug-n-play-template/footer-dadamail-address.html
@@ -5,7 +5,7 @@
         <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%">
           <tr>
             <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
-              <p style="margin:0;"><a href="<!-- tmpl_var forward_to_a_friend_link -->" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Forward to a Friend</a> | <a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
+              <p style="margin:0;"><a href="<!-- tmpl_var list_unsubscribe_link -->" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
             </td>
           </tr>
           <tr>
