added 3 col promo & changed placeholder img
- added 3 col vert promo
- changed file names
- changed placeholder images

--- a/examples/07052018-socal-cougs.html
+++ b/examples/07052018-socal-cougs.html
@@ -103,32 +103,51 @@ li.firstListItem {margin-top:20px !important;}
 li.lastListItem {margin-bottom:20px !important;}
 </style>
 <![endif]-->
+<!--
+FIND & REPLACE
+email background: #eddccc
+preview: #eddccc
+color: #333333
+heading color: #454343
+copy link color: #d90e28
+button color: #d90e28
+footer link color: #3a3a3a
+footer color: #333333
+-->
 </head>
 <body bgcolor="#eddccc" style="margin:0; padding:0; width:100% !important; background-color:#eddccc;">
   <div align="center" style="background-color:#eddccc;">
-
+<!-- ADD PREVIEW HERE -->
+<!-- PREVIEW -->
 <div style="display:none !important; visibility:hidden; mso-hide:all; font-size:1px; color:#eddccc; font-weight: normal; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden;">Join WSU CAHNRS Alumni for an inspired evening as we toast WSU and experience Washington Wines!
 </div>
-   
+<!-- END PREVIEW -->
+<!-- END ADD PREVIEW HERE -->   
     <table bgcolor="#eddccc" style="background-color:#eddccc;" role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="500">
       <tr>
         <td align="center" valign="top">
+<!-- ADD HERE -->
+<!-- VIEW ONLINE -->
 <table role="presentation" bgcolor="#eddccc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
           <td align="right" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:10px 20px 10px 20px;">
-            <p style="margin:0;">Raise a glass! | <a href="http://eoaclk.com/5cYpsRsYPi/" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
+            <p style="margin:0;">Raise a glass! | <a href="http://email.cahnrs.wsu.edu/html/cahnrs/socal-cougs/socal-cougs.html" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">View Online</a></p>
           </td>
         </tr>
       </table>
+<!-- END VIEW ONLINE -->
+<!-- IMAGE -->
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#d90e28; padding:0px 0px 0px 0px;">
-        <a href="http://eoaclk.com/91noTdcRIO/" target="_blank" style="color:#d90e28; text-decoration:none;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#d90e28; text-decoration:none;">
           <img src="http://email.cahnrs.wsu.edu/html/cahnrs/socal-cougs/raise-a-glass.jpg" alt="College of Agricultural, Human, and Natural Resource Science" width="600" height="345" border="0" style="display:block;" class="photo" />
         </a>
       </td>
     </tr>
-  </table>        
+  </table>
+<!-- END IMAGE -->
+<!-- HEADING -->         
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; text-transform: uppercase; font-size:26px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#d90e28; padding:10px 20px 10px 20px;">
@@ -136,6 +155,8 @@ li.lastListItem {margin-bottom:20px !important;}
       </td>
     </tr>
   </table>
+<!-- END HEADING -->  
+<!-- BODY COPY 1 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
         <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:20px 20px 20px 20px;">
@@ -143,6 +164,8 @@ li.lastListItem {margin-bottom:20px !important;}
         </td>
     </tr>
 </table>
+<!-- END BODY COPY 1 -->
+<!-- BODY COPY 2 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; text-transform: uppercase; font-size:20px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#d90e28; padding:0px 20px 0px 20px;">
@@ -150,6 +173,8 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 2 -->
+    <!-- BODY COPY 3 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:16px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:5px 20px 20px 20px;">
@@ -159,6 +184,8 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 3 -->
+<!-- BODY COPY 4-1 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
         <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:0px 20px 10px 20px;">
@@ -166,6 +193,8 @@ li.lastListItem {margin-bottom:20px !important;}
         </td>
     </tr>
 </table>
+<!-- END BODY COPY 4-1 -->
+<!-- BODY COPY 4-2 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:0px 20px 10px 20px;">
@@ -173,6 +202,8 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 4-2 -->
+    <!-- BODY COPY 4-3 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:0px 20px 10px 20px;">
@@ -180,6 +211,8 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 4-3 -->
+    <!-- BODY COPY 4-4 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:0px 20px 10px 20px;">
@@ -187,6 +220,8 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 4-4 -->
+<!-- BODY COPY 5 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
         <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: bold; font-style: italic; text-transform: uppercase; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:0px 20px 0px 20px;">
@@ -195,6 +230,8 @@ li.lastListItem {margin-bottom:20px !important;}
         </td>
     </tr>
 </table>
+<!-- END BODY COPY 5 -->
+<!-- BODY COPY 6 -->
 <table role="presentation" bgcolor="#ffeecc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
         <tr>
             <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#925b29; padding:20px 20px 20px 20px;">
@@ -202,20 +239,26 @@ li.lastListItem {margin-bottom:20px !important;}
             </td>
         </tr>
     </table>
+    <!-- END BODY COPY 6 -->
+<!-- IMAGE -->
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#d90e28; padding:0px 0px 0px 0px;">
-        <a href="http://eoaclk.com/T2nL5nz3lq/" target="_blank" style="color:#d90e28; text-decoration:none;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#d90e28; text-decoration:none;">
           <img src="http://email.cahnrs.wsu.edu/html/cahnrs/cahnrs-footer.jpg" alt="College of Agricultural, Human, and Natural Resource Science" width="600" height="40" border="0" style="display:block;" class="photo" />
         </a>
       </td>
     </tr>
   </table>
+<!-- END IMAGE -->
+<!-- COLOR BREAK -->
 <table role="presentation" bgcolor="#eddccc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
     </tr>
   </table>
+ <!-- COLOR BREAK -->
+<!-- FOOTER -->
 <table role="presentation" bgcolor="#eddccc" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
@@ -224,13 +267,15 @@ li.lastListItem {margin-bottom:20px !important;}
             <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:12px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#3a3a3a; padding:20px 20px 20px 20px;">
                     <p style="margin:0;"><a href="*|FORWARD|*" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Forward to a Coug</a> | <a href="*|UNSUB|*" target="_blank" style="color: #333333; outline: none; text-decoration: underline;">Unsubscribe</a></p>
               <p style="margin:0;">PO Box 646228, Pullman, WA 99164-6228<br/>
-    509-335-4561 | Fax: 509-335-1065 | <a href="mailto:alumni.friends@wsu.edu" style="color: #333333; outline: none; text-decoration: underline;">alumni.friends@wsu.edu</a> | <a href="http://eoaclk.com/VklMEOQEjF/" style="color: #333333; outline: none; text-decoration: underline;">cahnrs.wsu.edu/alumni/</a></p>
+    509-335-4561 | Fax: 509-335-1065 | <a href="mailto:alumni.friends@wsu.edu" style="color: #333333; outline: none; text-decoration: underline;">alumni.friends@wsu.edu</a> | <a href="https://cahnrs.wsu.edu/alumni/" style="color: #333333; outline: none; text-decoration: underline;">cahnrs.wsu.edu/alumni/</a></p>
             </td>
           </tr>
         </table>
       </td>
     </tr>
   </table>
+<!-- END FOOTER -->
+<!-- END ADD HERE -->
         </td>
       </tr>
     </table>
@@ -242,6 +287,5 @@ li.lastListItem {margin-bottom:20px !important;}
       </td>
     </tr>
   </table>
-<style> #_eoa_div, #_eoa_img { display:none; } @media print{ #_eoa_div { background-image: url('https://kx7JSX8DV0.eoapxl.com/kx7JSX8DV0/P'); } } div.OutlookMessageHeader, table.moz-email-headers-table, blockquote #_eoa_div, #mailContainerBody #_eoa_div { background-image:url('https://kx7JSX8DV0.eoapxl.com/kx7JSX8DV0/F') } </style><div id="_eoa_div"></div><img id="_eoa_img" src="https://kx7JSX8DV0.eoapxl.com/kx7JSX8DV0/" style="height:1px !important;width:1px !important;border-width:0 !important;margin-top:0 !important;margin-bottom:0 !important;margin-right:0 !important;margin-left:0 !important;padding-top:0 !important;padding-bottom:0 !important;padding-right:0 !important;padding-left:0 !important;display:block;" alt="" title="" border="0" width="1" height="1" />
 </body>
 </html>
