--- a/plug-n-play-template/core-2col-half-horz-text-img.html
+++ b/plug-n-play-template/core-2col-half-horz-text-img.html
@@ -1,4 +1,4 @@
-<!-- IMAGE - RIGHT 2COL -->         
+<!-- 2COL HALF TEXT IMG -->         
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
@@ -8,7 +8,7 @@
               <table role="presentation" dir="ltr" align="right" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
                 <tr>
                   <td class="paddingLeft20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 20px 20px 0;">
-                    <img src="http://placehold.it/280x150" alt="" width="280" height="150" border="0" style="display:block;" class="photo" />
+                    <img src="https://picsum.photos/g/280/150" alt="" width="280" height="150" border="0" style="display:block;" class="photo" />
                   </td>
                 </tr>
               </table>
@@ -29,4 +29,4 @@
       </td>
     </tr>
   </table>
-<!-- END IMAGE - RIGHT 2COL -->  
+<!-- END 2COL HALF TEXT IMG -->  
