--- a/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
+++ b/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
@@ -1,4 +1,4 @@
-<!-- IMAGE -->
+<!-- 1COL FULL CAHNRS IMAGE -->
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
@@ -8,4 +8,4 @@
       </td>
     </tr>
   </table>
-<!-- END IMAGE -->
+<!-- END1COL FULL CAHNRS IMAGE -->
