--- a/plug-n-play-template/core-1col-full-horz-img.html
+++ b/plug-n-play-template/core-1col-full-horz-img.html
@@ -1,11 +1,11 @@
-<!-- IMAGE -->
+<!-- 1COL FULL IMAGE -->
   <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
         <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
-          <img src="http://placehold.it/600x200" alt="" width="600" height="200" border="0" style="display:block;" class="photo" />
+          <img src="https://picsum.photos/g/600/200" alt="" width="600" height="200" border="0" style="display:block;" class="photo" />
         </a>
       </td>
     </tr>
   </table>
-<!-- END IMAGE -->
+<!-- END 1COL FULL IMAGE -->
