--- a/plug-n-play-template/core-1col-full-horz-text-button.html
+++ b/plug-n-play-template/core-1col-full-horz-text-button.html
@@ -1,4 +1,4 @@
-<!-- BODY COPY BUTTON -->
+<!-- 1COL FULL TEXT/BUTTON -->
 	<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
 		<tr>
 			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
@@ -17,7 +17,7 @@
 				</ul>
 				<p style="margin:0;">Address reply receiving domain Block recipient practices sent.</p>
 	<!-- BUTTON --> 
-					<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="260">
+					<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="560">
 						<tr>
 							<td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#981e32; padding:10px 0 20px 0;">
 								<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
@@ -34,4 +34,4 @@
 			</td>
 		</tr>
 	</table>
-<!-- END BODY COPY BUTTON -->
+<!-- END 1COL FULL TEXT/BUTTON -->
