--- a/plug-n-play-template/core-1col-full-horz-text-h1.html
+++ b/plug-n-play-template/core-1col-full-horz-text-h1.html
@@ -1,4 +1,4 @@
-<!-- HEADING -->         
+<!-- 1COL FULL TEXT-H1 -->         
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td class="paddingRightLeft10" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:24px; font-weight: bold; line-height:150%; mso-line-height-rule:exactly; color:#454343; padding:20px 20px 20px 20px;">
@@ -6,4 +6,4 @@
       </td>
     </tr>
   </table>
-<!-- END HEADING -->  
+<!-- END 1COL FULL TEXT-H1 -->  
