--- a/plug-n-play-template/core-1col-full-horz-text.html
+++ b/plug-n-play-template/core-1col-full-horz-text.html
@@ -1,4 +1,4 @@
-<!-- BODY COPY -->
+<!-- 1COL FULL TEXT -->
 	<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
 		<tr>
 			<td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
@@ -19,4 +19,4 @@
 			</td>
 		</tr>
 	</table>
- <!-- END BODY COPY -->
+ <!-- END 1COL FULL TEXT -->
