--- a/plug-n-play-template/core-2col-half-horz-img-text-button.html
+++ b/plug-n-play-template/core-2col-half-horz-img-text-button.html
@@ -1,4 +1,4 @@
-<!--IMAGE - LEFT 2COL -->
+<!-- 2COL HALF IMG TEXT/BUTTON -->
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
@@ -8,7 +8,7 @@
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
                 <tr>
                   <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 0 20px 20px;">
-                    <img src="http://placehold.it/280x150" alt="" width="280" height="150" border="0" style="display:block;" class="photo" />
+                    <img src="https://picsum.photos/g/280/150" alt="" width="280" height="150" border="0" style="display:block;" class="photo" />
                   </td>
                 </tr>
               </table>
@@ -20,6 +20,21 @@
                 <tr>
                   <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
                     <p style="margin:0;">Terms fill future confirm sign accept inform engagement internet protocol display. Throttle identify accessibility execute success offer method default series detail section purchase portion loyal local. Field comply represent Hypertext Markup Language.</p>
+  <!-- BUTTON --> 
+                    <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="260">
+                      <tr>
+                        <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:#981e32; padding:10px 0 20px 0;">
+                          <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+                            <tr>
+                              <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
+                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+  <!-- END BUTTON -->                          
                   </td>
                 </tr>
               </table>
@@ -29,4 +44,4 @@
       </td>
     </tr>
   </table>
-<!--IMAGE - LEFT 2COL --> 
+<!-- END 2COL HALF IMG TEXT/BUTTON -->
