--- a/plug-n-play-template/core-2col-half-horz-text.html
+++ b/plug-n-play-template/core-2col-half-horz-text.html
@@ -1,4 +1,4 @@
-<!-- BODY COPY - 2COL -->
+<!-- 2COL HALF TEXT TEXT -->
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
@@ -29,5 +29,5 @@
       </td>
     </tr>
   </table>
-<!-- END BODY COPY - 2COL -->
+<!-- END 2COL HALF TEXT TEXT -->
  
