--- a/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
+++ b/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
@@ -1,5 +1,5 @@
-<!-- IMAGE - LEFT BUTTON RIGHT 3COL -->
-  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+<!-- 3COL THIRDS IMG TEXT TEXT/BUTTON -->
+<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="center" valign="top">
         <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
@@ -9,7 +9,7 @@
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
                   <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;color:#333333; padding:20px 0 20px 20px;">
-                    <img src="http://placehold.it/180x150" alt="" width="180" height="150" border="0" style="display:block;" class="photo" />
+                    <img src="https://picsum.photos/g/180/150" alt="" width="180" height="150" border="0" style="display:block;" class="photo" />
                   </td>
                 </tr>
               </table>
@@ -61,4 +61,4 @@
       </td>
     </tr>
   </table>
-<!--END IMAGE - LEFT BUTTON RIGHT 3COL -->
+<!--END 3COL THIRDS IMG TEXT TEXT/BUTTON -->
