--- a/plug-n-play-template/core-4col-horz-logoicon-socialicons.html
+++ b/plug-n-play-template/core-4col-horz-logoicon-socialicons.html
@@ -1,4 +1,4 @@
-<!--  LOGO & SOCIAL  -->
+<!--  4COL LOGO/ICON SOCIAL/ICONS  -->
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
@@ -9,7 +9,7 @@
               <table role="presentation" class="widthAuto" cellpadding="0" cellspacing="0" border="0" width="100%">
                 <tr>
                   <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 20px 20px 20px;">
-                    <img src="http://placehold.it/200x40" alt="" width="200" height="40" border="0" style="display:block;" />
+                    <img src="https://picsum.photos/g/200/40" alt="" width="200" height="40" border="0" style="display:block;" />
                   </td>
                 </tr>
               </table>
@@ -28,13 +28,13 @@
               <table role="presentation" cellpadding="0" cellspacing="0" border="0">
                 <tr>
                   <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 10px 20px 20px;">
-                    <img src="http://placehold.it/40x40" alt="" width="40" height="40" border="0" style="display:block;" />
+                    <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
                   <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#333333; padding:20px 10px 20px 10px;">
-                    <img src="http://placehold.it/40x40" alt="" width="40" height="40" border="0" style="display:block;" />
+                    <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
                   <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;  color:#333333; padding:20px 20px 20px 10px;">
-                    <img src="http://placehold.it/40x40" alt="" width="40" height="40" border="0" style="display:block;" />
+                    <img src="https://picsum.photos/g/40/40" alt="" width="40" height="40" border="0" style="display:block;" />
                   </td>
                 </tr>
               </table>
@@ -45,4 +45,4 @@
       </td>
     </tr>
   </table>
-<!-- END Logo & Social -->
+<!-- END 4COL LOGO/ICON SOCIAL/ICONS -->
