--- a/plug-n-play-template/footer-cahnrs.html
+++ b/plug-n-play-template/footer-cahnrs.html
@@ -1,4 +1,4 @@
-<!-- FOOTER -->
+<!-- FOOTER CAHNRS -->
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
@@ -13,4 +13,4 @@
       </td>
     </tr>
   </table>
-<!-- END FOOTER -->
+<!-- END FOOTER CAHNRS -->
