--- a/plug-n-play-template/footer-generic.html
+++ b/plug-n-play-template/footer-generic.html
@@ -1,4 +1,4 @@
-<!-- FOOTER -->
+<!-- FOOTER GENERIC -->
   <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
       <td align="left" valign="top">
@@ -17,4 +17,4 @@
       </td>
     </tr>
   </table>
-<!-- END FOOTER -->
+<!-- END FOOTER GENERIC -->
