--- a/plug-n-play-template/header-preview-text.html
+++ b/plug-n-play-template/header-preview-text.html
@@ -1,4 +1,4 @@
 <!-- PREVIEW -->
-<div style="display:none !important; visibility:hidden; mso-hide:all; font-size:1px; font-weight: normal; color:orange; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden;">Insert preview text here. text color is orange!!! make color the same as background color!!! (EmailOnAcid CSS code) 
+<div style="display:none !important; visibility:hidden; mso-hide:all; font-size:1px; font-weight: normal; color:orange; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden;">Insert preview text here. Text color is orange!!! Make color the same as background color!!! (EmailOnAcid CSS code) This should be 500 characters to accomodate Siri reading the preheader for users. It reads all preheader text and then starts reading code.
 </div>
 <!-- END PREVIEW -->
