Add banner image with border

--- a/plug-n-play-template/break.html
+++ b/plug-n-play-template/break.html
@@ -4,4 +4,4 @@
       <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
     </tr>
   </table>
- <!-- BREAK -->
+ <!-- END BREAK -->
