--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -238,6 +238,24 @@ footer color: #333333
   </tr>
 </table>
 <!-- BREAK -->
+<!-- 1COL FULL IMAGE WITH BORDER -->
+<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 20px 20px 20px;">
+      <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
+        <img src="https://picsum.photos/g/560/160" alt="" width="560" height="260" border="0" style="display:block;" class="photo" />
+      </a>
+    </td>
+  </tr>
+</table>
+<!-- END 1COL FULL IMAGE WITH BORDER -->
+<!-- BREAK -->
+<table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
+  </tr>
+</table>
+<!-- BREAK -->
 <!-- 1COL FULL TEXT/BUTTON -->
 <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
