fix 2 col img text

--- a/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
+++ b/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
@@ -8,8 +8,8 @@
   <!-- IMG -->                     
               <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="200">
                 <tr>
-                  <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;color:#333333; padding:20px 0 20px 20px;">
-                    <img src="https://picsum.photos/g/180/150" alt="" width="180" height="150" border="0" style="display:block;" class="photo" />
+                  <td class="paddingRight20" align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal;color:#333333; padding:20px 20px 20px 20px;">
+                    <img src="https://picsum.photos/g/160/150" alt="" width="160" height="150" border="0" style="display:block;" class="photo" />
                   </td>
                 </tr>
               </table>
