add image styling

--- a/plug-n-play-template/core-1col-full-horz-img-border.html
+++ b/plug-n-play-template/core-1col-full-horz-img-border.html
@@ -3,7 +3,7 @@
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 20px 20px 20px;">
         <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
-          <img src="https://picsum.photos/g/560/160" alt="" width="560" height="260" border="0" style="display:block;" class="photo" />
+          <img src="https://picsum.photos/g/560/160" alt="" width="560" height="260" border="0" style="display:block;border-radius: 11px !important;" class="photo" />
         </a>
       </td>
     </tr>
