--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -119,7 +119,7 @@ footer link color: #3a3a3a
 footer color: #333333
 -->
 </head>
-<body bgcolor="purple" style="margin:0; padding:0; width:100% !important; background-color:purple;">
+<body bgcolor="purple" style="margin:0; padding:0; min-width:100% !important; background-color:purple;">
   <div align="center" style="background-color:purple;">
 <!-- ADD PREVIEW HERE --> 
 <!-- PREVIEW -->
