--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -242,6 +242,31 @@ footer color: #333333
   </tr>
 </table>
 <!-- BREAK -->
+<!-- 1COL FULL TEXT-IMAGE -->
+<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td bgcolor="#FFA500" style="background-image: url('https://picsum.photos/g/600/200');"
+      background="https://picsum.photos/g/600/200" width="600" height="200">
+      <!--[if gte mso 9]>
+      <v:rect style="width:600px;height:200px;" strokecolor="none">
+        <v:fill type="tile" color="#FFA500" src="https://picsum.photos/g/600/200" /></v:fill>
+      </v:rect>
+      <v:shape id="NameHere" style="position:absolute;width:540px;height:150px;">
+      <![endif]-->
+    <p>This text should appear on top of your background image.</p>
+      <!--[if gte mso 9]>
+      </v:shape>
+      <![endif]--></td>
+  </tr>
+</table>
+<!-- END 1COL FULL TEXT-IMAGE -->
+<!-- BREAK -->
+<table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
+  </tr>
+</table>
+<!-- BREAK -->
 <!-- 1COL FULL IMAGE WITH BORDER -->
 <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
   <tr>
