--- a/plug-n-play-template/core-1col-full-horz-text-img-button-overlay.html
+++ b/plug-n-play-template/core-1col-full-horz-text-img-button-overlay.html
@@ -2,30 +2,30 @@
 <!-- Background IMAGE -->
 <table role="presentation" bgcolor="#FFA500" cellpadding="0" cellspacing="0" border="0">
   <tr>
-    <td bgcolor="#FFA500" style="background-image: url('https://picsum.photos/g/600/200');"
-      background="https://picsum.photos/g/600/200" width="600" height="200">
+    <td valign="top" bgcolor="#FFA500" style="background-image: url('https://picsum.photos/g/600/300');"
+      background="https://picsum.photos/g/600/300" width="600" height="300">
       <!--[if gte mso 9]>
-      <v:rect style="width:600px;height:200px;" strokecolor="none">
-        <v:fill type="tile" color="#FFA500" src="https://picsum.photos/g/600/200" /></v:fill>
+      <v:rect style="width:600px;height:300px;" strokecolor="none">
+        <v:fill type="tile" color="#FFA500" src="https://picsum.photos/g/600/300" /></v:fill>
       </v:rect>
-      <v:shape id="NameHere" style="position:absolute;width:540px;height:150px;">
+      <v:shape id="NameHere" style="position:absolute;width:600px;height:300px;">
       <![endif]-->
 <!-- END Background IMAGE -->
 <!-- 1COL FULL CAHNRS IMAGE -->
-<table role="presentation" cellpadding="0" cellspacing="0" border="0" width="560">
+<table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600">
     <tr>
-      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 0px 0px 0px;">
-        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
-          <img src="http://email.cahnrs.wsu.edu/html/images/cahnrs-abbrv-horiz-logo-white.png" alt="College of Agricultural, Human, and Natural Resource Science" width="385" height="57" border="0" style="display:block;" class="photo" />
+      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:18px; font-weight: normal; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#FFFFFF; text-decoration:none;">
+          <img src="http://email.cahnrs.wsu.edu/html/images/cahnrs-abbrv-horiz-logo-white.png" alt="College of Agricultural, Human, and Natural Resource Science" width="385" height="57" border="0" style="display:block" class="photo" />
         </a>
       </td>
     </tr>
   </table>
 <!-- END 1COL FULL CAHNRS IMAGE -->
 <!-- 1COL FULL TEXT -->
-<table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="560">
+<table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
-     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
       <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
 <!-- BUTTON --> 
 <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="540">
