--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -59,20 +59,7 @@ a[x-apple-data-detectors] {
   display: none !important;
   width: 0 !important;
 }
-// VIDEO
-.video-wrapper {display:none;} //YahooMail
-@supports (-webkit-overflow-scrolling:touch) and (color:#ffffffff) { //iOS 10 and above
-  div[class^=video-wrapper] { display:block!important; }
-  div[class^=video-fallback] { display:none!important; }
-}
-@media (-webkit-min-device-pixel-ratio: 0) and (min-device-width:1024px) //Apple Mac Clients
-{
-  .video-wrapper { display:block!important; }
-  .video-fallback { display:none!important; }
-}
-#MessageViewBody .video-wrapper { display:block!important; } //SAMSUNG
-#MessageViewBody .video-fallback { display:none!important; }
-// END VIDEO
+
 @media only screen and (max-width: 600px), only screen and (max-device-width: 600px) {
 .hidden {
   display: none !important;
@@ -214,6 +201,68 @@ footer color: #333333
   </tr>
 </table>
 <!-- END 4COL LOGO/ICON SOCIAL/ICONS -->
+          <!-- BREAK -->
+<table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
+  </tr>
+</table>
+<!-- BREAK -->
+<!-- 1COL FULL TEXT-IMAGE-BUTTON OVERLAY -->
+<!-- Background IMAGE -->
+<table role="presentation" bgcolor="#FFA500" cellpadding="0" cellspacing="0" border="0">
+  <tr>
+    <td valign="top" bgcolor="#FFA500" style="background-image: url('https://picsum.photos/g/600/300');"
+      background="https://picsum.photos/g/600/300" width="600" height="300">
+      <!--[if gte mso 9]>
+      <v:rect style="width:600px;height:300px;" strokecolor="none">
+        <v:fill type="tile" color="#FFA500" src="https://picsum.photos/g/600/300" /></v:fill>
+      </v:rect>
+      <v:shape id="NameHere" style="position:absolute;width:600px;height:300px;">
+      <![endif]-->
+<!-- END Background IMAGE -->
+<!-- 1COL FULL CAHNRS IMAGE -->
+<table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600">
+    <tr>
+      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:18px; font-weight: normal; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
+        <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#FFFFFF; text-decoration:none;">
+          <img src="http://email.cahnrs.wsu.edu/html/images/cahnrs-abbrv-horiz-logo-white.png" alt="College of Agricultural, Human, and Natural Resource Science" width="385" height="57" border="0" style="display:block" class="photo" />
+        </a>
+      </td>
+    </tr>
+  </table>
+<!-- END 1COL FULL CAHNRS IMAGE -->
+<!-- 1COL FULL TEXT -->
+<table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+     <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#FFFFFF; padding:20px 20px 20px 20px;border:3px solid white;">
+      <p style="margin:0;">Email  ipsum <a href="https://wsu.edu/" target="_blank" style="color:#981e32; text-decoration:underline;">bounce message</a> deliver recipient mailbox rate clickthrough tracking commercial.</p>
+<!-- BUTTON --> 
+<table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="540">
+  <tr>
+    <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#981e32; padding:10px 0 20px 0;">
+      <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+        <tr>
+          <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;line-height:150%; mso-line-height-rule:exactly; padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
+            <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:underline;display:block;color:#FFFFFF;">Button</a>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+<!-- END BUTTON -->  
+    </td>
+  </tr>
+</table>
+<!-- END 1COL FULL TEXT -->
+      <!--[if gte mso 9]>
+      </v:shape>
+      <![endif]-->
+    </td>
+  </tr>
+</table>
+<!-- END 1COL FULL TEXT-IMAGE-BUTTON OVERLAY -->
 <!-- BREAK -->
 <table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
@@ -283,32 +332,7 @@ footer color: #333333
   </tr>
 </table>
 <!-- BREAK -->
-<!-- 1COL FULL VIDEO -->
-<table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0">
-  <tr>
-    <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:20px 20px 20px 20px;">
-      <video width="560" height="315" controls poster="http://email.cahnrs.wsu.edu/html/images/adrift.jpg" src="https://player.vimeo.com/video/69445362?autoplay=1&portrait=0" >
-          <!-- fallback 1 -->
-          <a href="https://vimeo.com/simonchristen/timelapsecollection" ><img height="176" src="http://email.cahnrs.wsu.edu/html/images/adrift-fallback.jpg" width="560" /></a>
-      </video>
-      
-      <!-- video section initially hidden -->
-      <div class="video-wrapper" style="display:none;">
-          <p>Video Content: A Time Lapse Collection</p>
-      <video width="560" height="315" controls="controls" poster="http://email.cahnrs.wsu.edu/html/images/adrift.jpg" src="https://player.vimeo.com/video/94923911?autoplay=1&portrait=0" > 
-          <!-- fallback 1 -->
-          <a href="https://player.vimeo.com/video/94923911?autoplay=1&portrait=0" ><img height="315" src="http://email.cahnrs.wsu.edu/html/images/adrift-fallback.jpg width="560" /></a>
-      </video>
-      </div>
-      <!-- fallback section initially displayed -->
-      <div class="video-fallback">
-          <p>Fallback Content</p>
-          <a href="https://player.vimeo.com/video/94923911?autoplay=1&portrait=0" ><img height="315" src="http://email.cahnrs.wsu.edu/html/images/adrift-fallback.jpg" width="560" /></a>
-      </div>
-    </td>
-  </tr>
-</table>
-<!-- END 1COL FULL VIDEO -->
+
 <!-- BREAK -->
 <table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
@@ -1035,13 +1059,7 @@ footer color: #333333
   </tr>
 </table>
 <!-- END FOOTER GENERIC -->
-<!-- BREAK -->
-<table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
-  <tr>
-    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
-  </tr>
-</table>
-<!-- BREAK -->
+
 <!-- END ADD HERE -->
         </td>
       </tr>
