--- a/plug-n-play-template/base.html
+++ b/plug-n-play-template/base.html
@@ -59,20 +59,6 @@ a[x-apple-data-detectors] {
   display: none !important;
   width: 0 !important;
 }
-// VIDEO
-.video-wrapper {display:none;} //YahooMail
-@supports (-webkit-overflow-scrolling:touch) and (color:#ffffffff) { //iOS 10 and above
-  div[class^=video-wrapper] { display:block!important; }
-  div[class^=video-fallback] { display:none!important; }
-}
-@media (-webkit-min-device-pixel-ratio: 0) and (min-device-width:1024px) //Apple Mac Clients
-{
-  .video-wrapper { display:block!important; }
-  .video-fallback { display:none!important; }
-}
-#MessageViewBody .video-wrapper { display:block!important; } //SAMSUNG
-#MessageViewBody .video-fallback { display:none!important; }
-// END VIDEO
 @media only screen and (max-width: 600px), only screen and (max-device-width: 600px) {
 .hidden {
   display: none !important;
@@ -96,6 +82,10 @@ a[x-apple-data-detectors] {
 }
 .paddingLeft20 {
   padding-left: 20px !important;
+}
+.paddingRightLeft10 {
+  padding-right: 10px !important;
+  padding-left: 10px !important;
 }
 }
 </style>
@@ -121,6 +111,7 @@ li.lastListItem {margin-bottom:20px !important;}
 FIND & REPLACE
 email background: purple
 preview: orange
+Image Overlay background color: #FFA500
 color: #333333
 heading color: #454343
 copy link color: #981e32
@@ -129,7 +120,7 @@ footer link color: #3a3a3a
 footer color: #333333
 -->
 </head>
-<body bgcolor="purple" style="margin:0; padding:0; width:100% !important; background-color:purple;">
+<body bgcolor="purple" style="margin:0; padding:0; min-width:100% !important; background-color:purple;">
   <div align="center" style="background-color:purple;">
 <!-- ADD PREVIEW HERE --> 
 <!-- END ADD PREVIEW HERE -->   
