3 colum with border & background color

--- a/plug-n-play-template/base.html
+++ b/plug-n-play-template/base.html
@@ -118,6 +118,9 @@ copy link color: #981e32
 button color: #981e32
 footer link color: #3a3a3a
 footer color: #333333
+button-like background: DarkRed
+button-like border: aqua
+button-like text: snow
 -->
 </head>
 <body bgcolor="purple" style="margin:0; padding:0; min-width:100% !important; background-color:purple;">
