new layout: 2 column with button in each

--- a/plug-n-play-template/everything.html
+++ b/plug-n-play-template/everything.html
@@ -429,6 +429,73 @@ footer color: #333333
   </tr>
 </table>
 <!-- BREAK -->
+<!-- 2COL HALF IMG BUTTON/BUTTON -->
+<table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+    <td align="center" valign="top">
+      <table role="presentation" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+        <tr>
+          <td align="left" valign="top">
+            <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
+                <tr>
+                  <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+  <!-- BUTTON --> 
+                    <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="260">
+                      <tr>
+                        <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:#981e32; padding:10px 0 20px 0;">
+                          <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+                            <tr>
+                              <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
+                                <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+  <!-- END BUTTON -->                          
+                  </td>
+                </tr>
+              </table>
+            <!--[if mso]>
+            </td>
+            <td align="left" valign="top">
+            <![endif]-->
+            <table role="presentation" align="left" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="300">
+              <tr>
+                <td align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#333333; padding:20px 20px 20px 20px;">
+<!-- BUTTON --> 
+                  <table role="presentation" bgcolor="#ffffff" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="260">
+                    <tr>
+                      <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; color:#981e32; padding:10px 0 20px 0;">
+                        <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#981E31;color:#FFFFFF;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:30px;border-bottom-right-radius:30px;">
+                          <tr>
+                            <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
+                              <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#FFFFFF;">Button</a>
+                            </td>
+                          </tr>
+                        </table>
+                      </td>
+                    </tr>
+                  </table>
+<!-- END BUTTON -->                          
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+<!-- END 2COL HALF IMG BUTTON/BUTTON -->
+<!-- BREAK -->
+<table role="presentation" bgcolor="purple" class="widthFull" cellpadding="0" cellspacing="0" border="0" width="600">
+  <tr>
+    <td class="paddingRightLeft10" align="left" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; line-height:150%; mso-line-height-rule:exactly; color:#4F5152; padding:20px 20px 20px 20px;margin:0;">&nbsp;</td>
+  </tr>
+</table>
+<!-- BREAK -->
 <!-- 1COL FULL TEXT CALLOUT -->
 <table role="presentation" bgcolor="#ffffff" class="widthFull" style="border-radius: 11px !important;" cellpadding="0" cellspacing="0" border="0" width="600">
   <tr>
