--- a/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
+++ b/plug-n-play-template/core-3col-thirds-horz-img-text-text-button.html
@@ -44,7 +44,7 @@
                             <table role="presentation" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" style="border-collapse:separate !important;background-color:#FFFFFF;color:#981E32;border-width:2px; border-style: solid;border-color:#000000;">
                               <tr>
                                 <td align="center" valign="middle" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px;padding-top:12px;padding-bottom:12px;padding-right:30px;padding-left:30px;">
-                                  <a href="http://wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#981E32;">Button</a>
+                                  <a href="https://cahnrs.wsu.edu/" target="_blank" style="font-weight:bold;line-height:100%;text-align:center;text-decoration:none;display:block;color:#981E32;">Button</a>
                                 </td>
                               </tr>
                             </table>
