--- a/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
+++ b/plug-n-play-template/core-1col-full-horz-cahnrs-img.html
@@ -3,7 +3,7 @@
     <tr>
       <td align="center" valign="top" style="font-family:'Open+Sans', Helvetica, Arial, sans-serif; font-size:14px; font-weight: normal; color:#981e32; padding:0px 0px 0px 0px;">
         <a href="https://cahnrs.wsu.edu/" target="_blank" style="color:#981e32; text-decoration:none;">
-          <img src="http://email.cahnrs.wsu.edu/html/cahnrs/cahnrs-footer.jpg" alt="College of Agricultural, Human, and Natural Resource Science" width="600" height="40" border="0" style="display:block;" class="photo" />
+          <img src="http://email.cahnrs.wsu.edu/html/cahnrs/cahnrs-footer.jpg" alt="College of Agricultural, Human, and Natural Resource Sciences" width="600" height="40" border="0" style="display:block;" class="photo" />
         </a>
       </td>
     </tr>
